# wondertrader

./: .gitignore  README.md
docs/: ALPHA_TOXICITY_DEEP_ANALYSIS.md  ALPHA_TOXICITY_REDESIGN_PLAN.md  ALPHA_WEIGHT_FRAMEWORK_DESIGN.md  ARCHITECTURE.md  CLOSEOUT_EXECUTOR_DESIGN.md  DEPLOY.md  EC_BACKTEST_ANALYSIS.md  ERROR_STATE_MACHINE.md  ERROR_STATE_MACHINE_AUDIT.md  MM_ARB_ARCHITECTURE.md  MM_ARB_B_FEASIBILITY.md  OPTIMIZATION_ROADMAP_V2.md  PAUSE_RESUME_UNIFICATION_AUDIT.md  PHASE1_SIGNAL_DIAGNOSIS.md  PHASE2_CLOSEOUT_AUDIT.md  PHASE4_P24_RESULTS.md  PHASE4_PLAN.md  PHASE4_SUMMARY.md  POSITION_BREACH_FIX.md  STRATEGY_SUBSYSTEM_VERIFICATION.md
scripts/deployment/: manage_linux.sh  manage_win.bat
src/: CMakeLists.txt  deploy_wtoptioncore.sh
src/Includes/: IOptStraCtx.h  ITraderApi.h  IUftStraCtx.h  UftStrategyDefs.h  WTSTypes.h
src/Share/: CMakeLists.txt  LockFreeRingBuffer.hpp  RingBuffer.hpp  WtKVCache.hpp  charconv.hpp
src/TraderCTP/: TraderCTP.cpp  TraderCTP.h
src/TraderCTPOpt/: TraderCTPOpt.cpp  TraderCTPOpt.h
src/WtBtCore/: UftMocker.cpp  UftMocker.h
src/WtCore/: TraderAdapter.cpp  TraderAdapter.h
src/WtFutuCore/: ANALYSIS_REPORT.md  AdaptiveParamManager.cpp  AdaptiveParamManager.h  AsyncArbitrageExecutor.cpp  AsyncArbitrageExecutor.h  AutoCancelPolicy.cpp  AutoCancelPolicy.h  BilateralQuoteStats.h  BookImbalanceSignalSource.h  CMakeLists.txt  CloseoutExecutor.cpp  CloseoutExecutor.h  CorrelationManager.cpp  CorrelationManager.h  FutuComponentFactory.cpp  FutuComponentFactory.h  FutuConfig.cpp  FutuConfig.h  FutuConfigValidator.h  FutuDataDefs.h  FutuPortfolio.cpp  FutuPortfolio.h  FutuQuoter.cpp  FutuQuoter.h  FutuRiskMonitor.cpp  FutuRiskMonitor.h  FutureTypes.h  ICWeightTracker.h  ISignalSource.h  LeadLagSignalSource.h  LockFreeQueue.hpp  MarketDataContext.cpp  MarketDataContext.h  MarketMakingEnhancer.cpp  MarketMakingEnhancer.h  MarketStateDetector.cpp  MarketStateDetector.h  MeanReversionStrategy.cpp  MeanReversionStrategy.h  MicroAlphaEngine.cpp  (+54 more)
src/WtFutuCore/config/: CONFIG_OPTIMIZATION.md  README.md  base.yaml  config.yaml  coordinator.yaml  hot_update.yaml  logcfg.yaml  main.yaml  mannual.yaml  uft_futu_config.yaml
src/WtFutuCore/config/modules/: alpha.yaml  auto_cancel.yaml  correlation.yaml  market_state.yaml  quoting.yaml  risk.yaml  spread_optimizer.yaml  synthetic_signal.yaml  toxicity.yaml
src/WtFutuCore/config/profiles/: aggressive.yaml  conservative.yaml  standard.yaml
src/WtFutuCore/config/strategy/: modules.yaml  quoting.yaml  risk.yaml
src/WtFutuCore/docs/: MM_SOFT_RISK_V3.md  MM_V3_TUNING_RESULTS.md
src/WtOptionCore/: BaseOrder.cpp  BaseOrder.h  Black76.cpp  Black76.h  BlackScholes.cpp  BlackScholes.h  CMakeLists.txt  CompositeOptionPricer.cpp  CompositeOptionPricer.h  CurveFitter.cpp  CurveFitter.h  ForecastSignal.h  GammaScalpOptionPricer.cpp  GammaScalpOptionPricer.h  IAlphaSignal.h  IOptionPricer.h  OptStrategy.h  OptionData.cpp  OptionData.h  OptionGreeks.cpp  OptionGreeks.h  OptionGrid.cpp  OptionGrid.h  OptionOrder.cpp  OptionOrder.h  OptionRisk.cpp  OptionRisk.h  OptionTypes.h  OrderManager.cpp  OrderManager.h  OrderManager_Append.cpp  PROJECT_DOCUMENTATION.md  QuoteStatistics.cpp  QuoteStatistics.h  SignalFactory.h  StandardOptionPricer.cpp  StandardOptionPricer.h  UnderlyingTradingData.cpp  UnderlyingTradingData.h  VolCurve.cpp  (+9 more)
src/WtOptionCore/Scanners/: ButterflyScanner.cpp  ButterflyScanner.h  GarchScanner.cpp  GarchScanner.h  IScanModule.cpp  IScanModule.h  LowBidsScanner.cpp  LowBidsScanner.h  MMScanner.cpp  MMScanner.h  OpenScanner.cpp  OpenScanner.h  SimplexScanner.cpp  SimplexScanner.h  SpreadScanner.cpp  SpreadScanner.h  StrikeSpreadScanner.cpp  StrikeSpreadScanner.h  SyntheticFutureScanner.cpp  SyntheticFutureScanner.h  VolSpreadScanner.cpp  VolSpreadScanner.h
src/WtOptionCore/config/: option_config_demo.json  option_strategy.json  option_strategy_advanced.json
src/WtOptionCore/tests/: test_blackscholes.cpp  test_optiongrid.cpp
src/WtRunner/: CMakeLists.txt
src/WtUftCore/: CMakeLists.txt  ITrdNotifySink.h  TraderAdapter.cpp  TraderAdapter.h  UftStraContext.cpp  UftStraContext.h  WtUftEngine.cpp
src/WtUftRunner/: main.cpp
